Changed payment platform, bug fix
